<resources>
    <string name="app_name">CodePath-BitFit</string>
    <string name="head_message">How are feeling today?</string>
    <string name="check_in_s">Check In\'s</string>
    <string name="why_string">Why are you feeling this way?</string>
    <string name="todo">TODO</string>
    <string name="scale">Scale 1 to 10</string>
    <string name="confident">Confident</string>
    <string name="anxious">Anxious</string>
    <string name="surprised">Surprised</string>
    <string name="anger">Anger</string>
    <string name="disgust">Disgust</string>
    <string name="sadness">Sadness</string>
    <string name="fear">Fear</string>
    <string name="joy">Joy</string>
    <string name="back">Back</string>
    <string name="post">Post</string>
    <string name="date">10/10/2022</string>
    <string name="back_button">Back button</string>
    <string name="_7">7</string>
    <string name="add_post">Add Post</string>
    <string name="add_post_button">Add post button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>